--- a/k8s/ms.yaml
+++ b/k8s/ms.yaml
@@ -1,27 +1,25 @@
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  name: wls-ms1
-  namespace: wls1
+  name: wls-ms
+  namespace: wls
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: wls-ms1
+      app: wls-ms
   template:
     metadata:
       labels:
-        app: wls-ms1
+        app: wls-ms
         tenant: t1
     spec:
       serviceAccountName: wls
       containers:
-      - name: wls-ms1
+      - name: wls-ms
         image: phx.ocir.io/oicpaas1/sumagant/wls-domain:12.2.1.3
         imagePullPolicy: Always
         env:
-        #- name: ADMIN_HOST
-        #  value: "10.244.0.243"
         - name: ADMIN_PORT
           value: "7001"
         - name: ADMIN_PASSWORD
@@ -30,10 +28,6 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.podIP
-        #- name: MS_NAME
-        #  value: "wls-ms1"
-        #- name: NM_NAME
-        #  value: nm_ms1
         - name: MS_PORT
           value: "8001"
         - name: NM_PORT
@@ -45,11 +39,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: ms1
-  namespace: wls1
+  name: ms
+  namespace: wls
 spec:
   selector:
-    app: wls-ms1
+    app: wls-ms
   ports:
   - protocol: TCP
     port: 80
