--- a/k8s/wls-admin.yaml
+++ b/k8s/wls-admin.yaml
@@ -1,22 +1,22 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: wls1
+  name: wls
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: wls
-  namespace: wls1
+  namespace: wls
 ---
 #
-# creating cluster roles
+# creating role
 #
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: wls-role
-  namespace: wls1
+  namespace: wls
 rules:
 - apiGroups: [""]
   resources: ["namespaces"]
@@ -44,7 +44,7 @@ apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: wls-admin
-  namespace: wls1
+  namespace: wls
 spec:
   replicas: 1
   selector:
@@ -71,11 +71,11 @@ kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: wls-rolebinding
-  namespace: wls1
+  namespace: wls
 subjects:
 - kind: ServiceAccount
   name: wls
-  namespace: wls1
+  namespace: wls
   apiGroup: ""
 roleRef:
   kind: Role
@@ -86,7 +86,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: wls-admin
-  namespace: wls1
+  namespace: wls
 spec:
   selector:
     app: wls-admin
@@ -99,7 +99,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: wls-admin
-  namespace: wls1
+  namespace: wls
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
     ingress.kubernetes.io/proxy-redirect: default
