added parent pom for both modules.

--- a/wls-controller/pom.xml
+++ b/wls-controller/pom.xml
@@ -3,10 +3,13 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>oic</groupId>
+  <parent>
+    <artifactId>wls-mgmt</artifactId>
+    <groupId>oic</groupId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
   <artifactId>wls-controller</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
   <name>wls-controller</name>
 
   <dependencyManagement>
