--- a/oic-docker/k8s/wls-admin.yaml
+++ b/oic-docker/k8s/wls-admin.yaml
@@ -1,45 +1,3 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: wls
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: wls
-  namespace: wls
----
-#
-# creating role
-#
-kind: Role
-apiVersion: rbac.authorization.k8s.io/v1beta1
-metadata:
-  name: wls-role
-  namespace: wls
-rules:
-- apiGroups: [""]
-  resources: ["namespaces"]
-  verbs: ["get", "list", "watch"]
-- apiGroups: [""]
-  resources: ["pods"]
-  verbs: ["get", "list", "watch"]
-- apiGroups: [""]
-  resources: ["persistentvolumes"]
-  verbs: ["get", "list", "watch", "create", "update", "patch", "delete", "deletecollection"]
-- apiGroups: ["apiextensions.k8s.io"]
-  resources: ["customresourcedefinitions"]
-  verbs: ["get", "list", "watch", "create", "update", "patch", "delete", "deletecollection"]
-- apiGroups: ["extensions"]
-  resources: ["ingresses"]
-  verbs: ["get", "list", "watch", "create", "update", "patch", "delete", "deletecollection"]
-- apiGroups: ["authentication.k8s.io"]
-  resources: ["tokenreviews"]
-  verbs: ["create"]
-- apiGroups: ["authorization.k8s.io"]
-  resources: ["selfsubjectaccessreviews", "localsubjectaccessreviews", "subjectaccessreviews", "selfsubjectrulesreviews"]
-  verbs: ["create"]
----
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
@@ -64,24 +22,6 @@ spec:
       imagePullSecrets:
       - name: k8s-pull
 ---
-#
-# creating role-bindings
-#
-kind: RoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
-metadata:
-  name: wls-rolebinding
-  namespace: wls
-subjects:
-- kind: ServiceAccount
-  name: wls
-  namespace: wls
-  apiGroup: ""
-roleRef:
-  kind: Role
-  name: wls-role
-  apiGroup: rbac.authorization.k8s.io
----
 apiVersion: v1
 kind: Service
 metadata:
@@ -101,13 +41,29 @@ metadata:
   name: wls-admin
   namespace: wls
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    ingress.kubernetes.io/proxy-redirect: default
+    ingress.kubernetes.io/ssl-redirect: false
+spec:
+  rules:
+  - http:
+      paths:
+      - path: /console
+        backend:
+          serviceName: wls-admin
+          servicePort: 80
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: wls-apis
+  namespace: wls
+  annotations:
     ingress.kubernetes.io/proxy-redirect: default
 spec:
   rules:
   - http:
       paths:
-      - path: /wls-admin
+      - path: /management
         backend:
           serviceName: wls-admin
           servicePort: 80
