--- a/wls-controller/src/main/resources/wls-controller.yaml
+++ b/wls-controller/src/main/resources/wls-controller.yaml
@@ -1,3 +1,63 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: wls
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: wls
+  namespace: wls
+---
+#
+# creating role
+#
+kind: Role
+apiVersion: rbac.authorization.k8s.io/v1beta1
+metadata:
+  name: wls-role
+  namespace: wls
+rules:
+- apiGroups: [""]
+  resources: ["namespaces"]
+  verbs: ["get", "list", "watch"]
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["get", "list", "watch"]
+- apiGroups: [""]
+  resources: ["persistentvolumes"]
+  verbs: ["get", "list", "watch", "create", "update", "patch", "delete", "deletecollection"]
+- apiGroups: ["apiextensions.k8s.io"]
+  resources: ["customresourcedefinitions"]
+  verbs: ["get", "list", "watch", "create", "update", "patch", "delete", "deletecollection"]
+- apiGroups: ["extensions"]
+  resources: ["ingresses"]
+  verbs: ["get", "list", "watch", "create", "update", "patch", "delete", "deletecollection"]
+- apiGroups: ["authentication.k8s.io"]
+  resources: ["tokenreviews"]
+  verbs: ["create"]
+- apiGroups: ["authorization.k8s.io"]
+  resources: ["selfsubjectaccessreviews", "localsubjectaccessreviews", "subjectaccessreviews", "selfsubjectrulesreviews"]
+  verbs: ["create"]
+---
+#
+# creating role-bindings
+#
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1beta1
+metadata:
+  name: wls-rolebinding
+  namespace: wls
+subjects:
+- kind: ServiceAccount
+  name: wls
+  namespace: wls
+  apiGroup: ""
+roleRef:
+  kind: Role
+  name: wls-role
+  apiGroup: rbac.authorization.k8s.io
+---
 apiVersion: metacontroller.k8s.io/v1alpha1
 kind: DecoratorController
 metadata:
